--- a/backend/package.json
+++ b/backend/package.json
@@ -12,15 +12,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.0.0",
+    "chalk": "^4.1.2",
     "cors": "^2.8.5",
-    "debug": "^4.3.3",
+    "debug": "^4.3.2",
     "dotenv": "^14.2.0",
     "express": "^4.17.2",
     "jest": "^27.4.7",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.7",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.7.0",
