--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,4 @@
 PORT=8001
 DEBUG=beLike,beLikeApi:*
-DDBB_URL=mongodb+srv://alexmf:admin99@cluster0.aqspo.mongodb.net/beLikeDDBB
+DDBB_URL=
 JWT_SECRET=MYSECRET
